# opencv_face_detection_prac

./: CMakeLists.txt  README.md  a.out  dlib.cpp  dnn.cpp  eye.cpp  geek.cpp  install_dependency.sh  landmark.cpp  t1.cpp
lib/: libdlib.so.19.19.0  libopencv_face.so.4.2.0  libopencv_highgui.so.4.2.0  libopencv_objdetect.so.4.2.0  libopencv_videoio.so.4.2.0
